fix profile img z-index

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -611,7 +611,6 @@
     position: relative;
     width: 200px;
     height: 200px;
-    z-index: 9999;
     top: -160px;
     left: 40px;
     border: 1px solid #A2A3A3;
